fixed loop bunch not covering all of upgrades width when upgrades scrolled up in mobile layout.

--- a/loop_clicker/src/App.css
+++ b/loop_clicker/src/App.css
@@ -45,6 +45,7 @@ div {
   position:fixed;
   left: 0px;
   top: 0px;
+  width:413px
 }
 /* .loopBunchColumn.desktop{
   width: 400px;
@@ -62,6 +63,7 @@ div {
   flex-direction: column;
   left: 10px;
   top: 10px;
+  /* width: 300px; */
   /* background-color: black; */
 }
 
@@ -74,6 +76,8 @@ div {
 .loopBunch {
   position: absolute;
   /* background-color: black; */
+  width: 200px;
+  height: 200px;
 }
 
 .loop {
